--- a/Themes/WellCoded/composer.json
+++ b/Themes/WellCoded/composer.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "Nicolas Widart",
-      "email": "info@asgardcms.com",
+      "name": "Julien Tant",
+      "email": "julien@craftyx.fr",
       "role": "Developer"
     }
   ],
